# ahmidas

./: CMakeLists.txt  Installation.md  NamingConventions.md  ProjectHome.md  SVN.md  TestSuite.md  Todo.md
applications/: CMakeLists.txt  calculate_BK.cpp  calculate_BK_input.xml  contract_OS_heavylight_mesons_2pts_input.xml  contract_baryon2point.cpp  contract_baryon2point_input.xml  contract_disconnected.cpp  contract_disconnected_heavylight.cpp  contract_disconnected_heavylight_input.xml  contract_disconnected_vvSum.cpp  contract_meson_ultrastochastic_2pts.cpp  contract_nucleon3point.cpp  contract_two_lines.cpp  contract_two_lines_common.cpp  contract_two_lines_input.xml  contract_two_stochastic_lines.cpp  contract_two_ultrastochastic_lines.cpp  finalize_meson_sequential_propagator.cpp  finalize_meson_sequential_propagator_common.cpp  generate_sequential_sources_nucleon.cpp  generate_sequential_sources_nucleon_input.xml
example/: CMakeLists.txt  check_meson_3pts.cpp  check_meson_3pts_common.cpp  check_meson_stochastic_3pts.cpp  confrw.cpp  contract_2point_proton.cpp  contract_2point_proton_input.xml  contract_3point_sequential.cpp  contract_3point_sequential_alternative.cpp  contract_3point_sequential_alternative_input.xml  convert_ildg_to_eo.cpp  gamma.cpp  generate_point_source.cpp  generate_sequential_sources.cpp  generate_sequential_sources_alternative.cpp  generate_sequential_sources_alternative_input.xml  generate_source_input.xml  generate_stochastic_source.cpp  generate_volume_source.cpp  makeetmcprop.cpp  output.cpp  pion_contraction.cpp  pion_contraction_input.xml  propagator_dump.cpp  prova.cpp  prova_contraction.cpp  prova_contraction_input.xml  prova_input.xml  prova_sequential_contraction.cpp  reconstruct_doublet.cpp  reconstruct_doublet_common.cpp  smearAPE.cpp  smearHYP.cpp
src/L0/Base/: Base.h  CMakeLists.txt  Knuth.h  Random.h  Ranlux.h  ScidacChecksum.h  Unifold.h  Z2.h
src/L0/Core/: Buffer.h  CMakeLists.txt  Com.h  Component.h  Core.h  Correlator.h  Field.h  Grid.h  Propagator.h  TMatrix.h  Unifold.h
src/L0/QCD/: CMakeLists.txt  Gauge.h  Spinor.h  Tensor.h  WeylSpinor.h
src/L0/SU3/: CMakeLists.txt  Matrix.h  Tensor.h  Vector.h
src/L1/Smear/: APE.h  CMakeLists.txt  Fuzz.h  HYP.h  Jacobi.h
src/L2/Contract/: Baryon.h  CMakeLists.txt  Disconnected.h  Meson.h  Wick.h
test/: CMakeLists.txt  conf48.0000  config.cpp  dirac_operator.cpp  endian.cpp  fieldIncreaseIndex.cpp  field_shift.cpp  fieldcomponent.cpp  gamma.cpp  grid.cpp  input.xml  isnan.cpp  lat.sample.16x6.milc.info  light_mesons.cpp  light_mesons_one_end_trick.cpp  limereader.cpp  loadMILC.cpp  outprcv.01.9999  point_src.48  proton.cpp  proton_3point_sequential.cpp  random.cpp  readFile.cpp  read_input_file_input.xml  reunit.cpp  reunit1.cpp  reunit2.cpp  reunit4.cpp  reunit_algo_comp.cpp  scidacchecksum.cpp  sequential_sources.cpp  smearing.cpp  source.00.00  source.9999.01.00.inverted  source.9999.01.02.inverted  source.9999.01.03.inverted  source48.02  source48.03  source48.04  source48.05  (+38 more)
trunk/: CMakeLists.txt
trunk/CMakeModules/: FindLEMON.cmake
trunk/applications/: CMakeLists.txt  calculate_BK.cpp  calculate_BK_input.xml  compute_sources.cpp  compute_sources_input.xml  contract_OS_heavylight_mesons_2pts.cpp  contract_baryon2point.cpp  contract_disconnected.cpp  contract_disconnected_heavylight.cpp  contract_disconnected_heavylight_input.xml  contract_disconnected_input.xml  contract_disconnected_vvSum.cpp  contract_meson_2pts.cpp  contract_meson_2pts_common.cpp  contract_meson_stochastic_2pts.cpp  contract_nucleon3point.cpp  contract_nucleon3point_input.xml  contract_nucleon3point_stochastic.cpp  contract_two_lines.cpp  contract_two_lines_common.cpp  finalize_meson_sequential_propagator_common.cpp  finalize_meson_sequential_stochastic_propagator.cpp  finalize_meson_sequential_ultrastochastic_propagator.cpp  generate_meson_sequential_source.cpp  generate_meson_sequential_source_common.cpp  generate_meson_sequential_stochastic_source.cpp  generate_meson_sequential_ultrastochastic_source.cpp  generate_sequential_sources_nucleon.cpp  milc2ildg.cpp
trunk/doc/: MILC.txt  build.txt  clifford.tex  coding.tex  fieldshift.txt  gamma.tex  indexing.tex  io_issues.txt  output.tex  plaquette.tex
trunk/example/: CMakeLists.txt  check_meson_3pts_common.cpp  check_meson_ultrastochastic_3pts.cpp  confrw.cpp  contract_3point_sequential.cpp  contract_3point_sequential_alternative.cpp  convert_ildg_to_eo.cpp  gamma.cpp  generate_point_source.cpp  generate_point_source_input.xml  generate_sequential_sources.cpp  generate_sequential_sources_alternative.cpp  generate_sequential_sources_input.xml  generate_source.cpp  generate_stochastic_source.cpp  generate_stochastic_source_input.xml  generate_volume_source.cpp  makeetmcprop.cpp  output.cpp  pion_contraction.cpp  propagator_dump.cpp  prova.cpp  prova_contraction.cpp  prova_contraction_input.xml  prova_sequential_contraction.cpp  prova_sequential_contraction_input.xml  reconstruct_doublet_common.cpp  reconstruct_stochastic_doublet.cpp  reconstruct_ultrastochastic_doublet.cpp  smearAPE.cpp  smearHYP.cpp  smearHYP_input.xml
trunk/src/: CMakeLists.txt  main.cpp  para_test.cpp  simon_test.cpp  simon_test_input.xml  test.cpp  vincent_test.cpp
trunk/src/Core/: CMakeLists.txt  Core.h  Core.inlines
trunk/src/Dirac/: CMakeLists.txt
trunk/src/L0/: CMakeLists.txt  Debug.h  Print.h
trunk/test/: CMakeLists.txt  MPIstartstop.cpp  checkILDG.cpp  conf.88  conf.9999  config.cpp  endian.cpp  fieldIncreaseIndex.cpp  field_shift.cpp  fieldcomponent.cpp  gamma.cpp  grid.cpp  input.xml  isnan.cpp  light_mesons.cpp  light_mesons_one_end_trick.cpp  limereader.cpp  loadMILC.cpp  proton.cpp  proton_3point_sequential.cpp  random.cpp  readFile.cpp  reunit.cpp  reunit1.cpp  reunit3.cpp  reunit4.cpp  reunit_algo_comp.cpp  scidacchecksum.cpp  sequential_sources.cpp  smearing.cpp  source.9999.01.01.inverted  source48.00  source48.01  source48.04  source48.05  source48.06  source48.08  source48.09  source48_d.00.inverted  source48_d.01.inverted  (+37 more)
trunk/wiki/: Todo.wiki
(+1173 files in other folders)
