CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Ahmidas)

FIND_PACKAGE(MPI REQUIRED)

ENABLE_TESTING()

INCLUDE_DIRECTORIES(BEFORE SYSTEM src)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)

ADD_EXECUTABLE(main src/main.cpp)
TARGET_LINK_LIBRARIES(main ILDG Lime SU3)

ADD_EXECUTABLE(comtest src/L0/Core/Com/test.cpp)
TARGET_LINK_LIBRARIES(comtest Core)
