ADD_EXECUTABLE(generate_sequential_sources_nucleon generate_sequential_sources_nucleon.cpp)
TARGET_LINK_LIBRARIES(generate_sequential_sources_nucleon SU3 QCD IO Base Core Dirac Weave Contract Input Smear)
ADD_EXECUTABLE(contract_nucleon3point contract_nucleon3point.cpp)
TARGET_LINK_LIBRARIES(contract_nucleon3point SU3 QCD IO Base Core Dirac Weave Contract Input Smear)
ADD_EXECUTABLE(contract_two_lines contract_two_lines.cpp)
TARGET_LINK_LIBRARIES(contract_two_lines SU3 QCD IO Base Core Dirac Contract Input Ahmidas Print)
ADD_EXECUTABLE(contract_two_stochastic_lines contract_two_stochastic_lines.cpp)
TARGET_LINK_LIBRARIES(contract_two_stochastic_lines SU3 QCD IO Base Core Dirac Contract Input Ahmidas Print)
ADD_EXECUTABLE(calculate_BK calculate_BK.cpp)
TARGET_LINK_LIBRARIES(calculate_BK SU3 QCD IO Base Core Dirac Weave Contract Input Ahmidas Print)
